{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 255,
  "lineage": "92b0d8ce-6be5-19b1-4187-16b3a4dc14c6",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "lais-fwlpri-ref",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "3306"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-05-10T08:13:17.997-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ces-igniteprogram/global/firewalls/lais-fwlpri-df",
            "log_config": [],
            "name": "lais-fwlpri-df",
            "network": "https://www.googleapis.com/compute/v1/projects/ces-igniteprogram/global/networks/lais-vpc-df",
            "priority": 1000,
            "project": "ces-igniteprogram",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ces-igniteprogram/global/firewalls/lais-fwlpri-df",
            "source_ranges": [
              "10.0.4.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "private-fwl"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "lais-fwlpub-ref",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "22"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-05-10T08:13:17.983-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ces-igniteprogram/global/firewalls/lais-fwlpub-df",
            "log_config": [],
            "name": "lais-fwlpub-df",
            "network": "https://www.googleapis.com/compute/v1/projects/ces-igniteprogram/global/networks/lais-vpc-df",
            "priority": 1000,
            "project": "ces-igniteprogram",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ces-igniteprogram/global/firewalls/lais-fwlpub-df",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "public-fwl"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "lais-vpc-ref",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/ces-igniteprogram/global/networks/lais-vpc-df",
            "mtu": 0,
            "name": "lais-vpc-df",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "ces-igniteprogram",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ces-igniteprogram/global/networks/lais-vpc-df"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "lais-router-ref",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "CUSTOM",
                "asn": 64514,
                "keepalive_interval": 20
              }
            ],
            "creation_timestamp": "2023-05-10T08:02:41.228-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/ces-igniteprogram/regions/us-east1/routers/lais-router-df",
            "name": "lais-router-df",
            "network": "https://www.googleapis.com/compute/v1/projects/ces-igniteprogram/global/networks/lais-vpc-df",
            "project": "ces-igniteprogram",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ces-igniteprogram/regions/us-east1/routers/lais-router-df"
          },
          "dependencies": [
            "google_compute_network.lais-vpc-ref"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "ces-igniteprogram/us-east1/lais-router-df/lais-nat-terraform",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "lais-nat-terraform",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "ces-igniteprogram",
            "region": "us-east1",
            "router": "lais-router-df",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "https://www.googleapis.com/compute/v1/projects/ces-igniteprogram/regions/us-east1/subnetworks/lais-subpri-df",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.lais-vpc-ref",
            "google_compute_router.lais-router-ref"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "lais-subpri-ref",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-05-10T08:02:41.307-07:00",
            "gateway_address": "10.0.5.1",
            "id": "projects/ces-igniteprogram/regions/us-east1/subnetworks/lais-subpri-df",
            "ip_cidr_range": "10.0.5.0/24",
            "name": "lais-subpri-df",
            "network": "https://www.googleapis.com/compute/v1/projects/ces-igniteprogram/global/networks/lais-vpc-df",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "ces-igniteprogram",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ces-igniteprogram/regions/us-east1/subnetworks/lais-subpri-df",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.lais-vpc-ref"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "lais-subpub-ref",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-05-10T08:02:41.370-07:00",
            "gateway_address": "10.0.4.1",
            "id": "projects/ces-igniteprogram/regions/us-east1/subnetworks/lais-subpub-df",
            "ip_cidr_range": "10.0.4.0/24",
            "name": "lais-subpub-df",
            "network": "https://www.googleapis.com/compute/v1/projects/ces-igniteprogram/global/networks/lais-vpc-df",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "ces-igniteprogram",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ces-igniteprogram/regions/us-east1/subnetworks/lais-subpub-df",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.lais-vpc-ref"
          ]
        }
      ]
    }
  ]
}